add some styles

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="./assets/styles/main.css" />
+  </head>
 
-<body>
+  <body>
+    <div class="card">
+      <form>
+        <input type="text" class="text-inp new-item" />
+        <button type="submit" class="btn add-item">Add</button>
+      </form>
+      <ul class="list"></ul>
+    </div>
 
-    <form>
-        <input type="text" class="new-item">
-        <button type="submit" class="add-item">Add</button>
-    </form>
-    <ul class="list"></ul>
+    <div class="card"></div>
+
     <script src="./assets/js/index.js"></script>
-</body>
-
+  </body>
 </html>
