--- a/index.html
+++ b/index.html
@@ -23,21 +23,25 @@
       </form>
     </div>
 
+    <h1>Make today great</h1>
+
     <div class="wrapper">
       <div class="card">
         <form>
           <input type="text" class="text-inp new-item" />
-          <button type="submit" class="btn add-item">
+          <button type="submit" class="btn btn-dark add-item">
             <i class="fas fa-plus"></i>
           </button>
         </form>
         <ul class="list uncompleted"></ul>
       </div>
 
-      <div class="card"><ul class="list completed"></ul></div>
+      <div class="card">
+        <h2 class="count"></h2>
+        <ul class="list completed"></ul>
+      </div>
     </div>
 
     <script src="./assets/js/index.js"></script>
-    <script src="./assets/js/modal.js"></script>
   </body>
 </html>
